syntax = "proto3";

package modules.common.api;

option go_package = "modules/common/gen/auth";

// Wiadomo≈õci

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

message ResetPasswordRequest {
  string email = 1;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}

// Serwis

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
}
